--- a/pig.html
+++ b/pig.html
@@ -28,6 +28,19 @@ body {
     color: var(--light);
     min-height: 100vh; padding: 20px;
 }
+/* Security Warning Banner */
+.security-banner {
+    background: var(--warning);
+    color: #222;
+    font-weight: bold;
+    font-size: 1.08rem;
+    text-align: center;
+    padding: 1rem 0;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.09);
+    margin-bottom: 1.4rem;
+    border-radius: var(--radius);
+    letter-spacing: .01em;
+}
 .container { max-width: 1400px; margin: 0 auto; }
 header { text-align: center; padding:2rem 0; margin-bottom:2rem; }
 .logo { display: flex; align-items:center; justify-content:center; gap:15px; margin-bottom:1rem;}
@@ -125,8 +138,28 @@ footer {text-align:center;padding:2rem 0;color:var(--gray);font-size:.9rem;borde
 @media(max-width:768px){h1{font-size:2.2rem;}.subtitle{font-size:1rem;}.gallery-grid{grid-template-columns:repeat(auto-fill,minmax(220px,1fr));}}
 @media(max-width:480px){.gallery-grid{grid-template-columns:1fr;}.gallery-title{font-size:1.5rem;}.btn{padding:12px 20px;font-size:1rem;}}
 </style>
+<style>
+.security-banner {
+    background-color: var(--warning);
+    color: var(--dark);
+    padding: 15px 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    display: none; /* Hidden by default, shown by JS */
+}
+.security-banner.active {
+    display: block;
+}
+</style>
 </head>
 <body>
+<div class="security-banner" id="security-warning-banner">
+    This deployment uses a temporary API key. Do not share this link.
+</div>
 <div class="container">
 <header>
     <div class="logo"><i class="fas fa-palette logo-icon"></i>
@@ -739,6 +772,20 @@ document.addEventListener('DOMContentLoaded', () => {
     initializeGallery(defaultNum);
     initializeModels();
 });
+<script>
+// SECURITY BANNER ACTIVATION
+// Show banner in development/preview mode.
+// For demonstration, activate banner if ?dev=true is in the URL query parameters.
+(function() {
+    const urlParams = new URLSearchParams(window.location.search);
+    const isDevMode = urlParams.get('dev') === 'true';
+    if (isDevMode) {
+        const securityBanner = document.getElementById('security-warning-banner');
+        if (securityBanner) {
+            securityBanner.classList.add('active');
+        }
+    }
+})();
 </script>
 </body>
 </html>
